# meter

./: .dockerignore  .envrc  .gitignore  README-Docker.md  README.md  compile_commands.json  docker-compose.prod.yml  docker-compose.yml  flake.nix  package.json  platformio.ini  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  turbo.json
.github/workflows/: deploy.yml
apps/esp/: .clangd  README.md  compile_commands.json  flake.nix
apps/esp/src/: config.h  credentials.example.h  credentials.h  main.cpp
apps/grafana/: .env.example  README.md
apps/grafana/provisioning/dashboards/: dashboard.yml  meter-dashboard.json
apps/grafana/provisioning/datasources/: influxdb.yml
apps/rp/: .dockerignore  .env.example  Dockerfile  README-Docker.md  README.md  main.py  pyproject.toml
apps/web/: .dockerignore  .env.example  Dockerfile  README-Docker.md  astro.config.mjs  astro.config.ts  docker-compose.yml  nginx.conf  package.json  stats.html  svelte.config.js  tsconfig.json  vite.config.ts
apps/web/dev-dist/: sw.js
apps/web/messages/: bg.json  en.json
apps/web/project.inlang/: project_id
apps/web/src/: app.css  app.html  sw.ts
apps/web/src/components/: stats.tsx
apps/web/src/layouts/: Layout.astro
apps/web/src/lib/: influxdb.ts
apps/web/static/: browserconfig.xml
apps/web2/: .env.example  README.md  package.json  vite.config.ts
apps/web2/messages/: en.json
apps/web2/src/: app.css
grafana/provisioning/dashboards/: dashboard.yml  dht11-dashboard.json
grafana/provisioning/datasources/: influxdb.yml
include/: api.h
src/: api.cpp  main.cpp
(+26 files in other folders)
